# pcyp_openmp

./: CMakeLists.txt  openmp01.cpp  openmp02.cpp  reduccion.cpp  u_conteo.txt  u_conteo2.txt
